@@ -103,6 +103,7 @@ dpkg (1.17.14) UNRELEASED; urgency=low
   * Say arch-wildcard instead of arch-alias in dpkg-architecture --help output.
   * Test suite:
     - Do not leave temporary files behind on failure or when interrupted.
+    - Add basic unit tests for the FNV hashing function.
   * Add --build and --extract command aliases to dpkg-source.
   * Print file or package names instead of pointers in dpkg debug output,
     to make it more meaningful and reproducible.
